# ai-mainframe-modernization-assistant

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  TASK-001-REVIEW.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-006.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  (+4 more)
app/: compiler.py  main.py
app/api/: router.py
app/backend/: __init__.py
app/core/: config.py  constants.py  exceptions.py  handlers.py  logging.py  middleware.py
app/ingestion/: detector.py  metadata.py  models.py  service.py  uploader.py  validator.py  workspace.py
app/ir/: __init__.py  blocks.py  builder.py  instructions.py  nodes.py  printer.py  program.py  visitors.py
app/parser/: __init__.py
app/workspace/: __init__.py  classifier.py  inventory.py  models.py  scanner.py  summary.py
docs/architecture/: ast.md  backend.md  data-parser.md  identification-parser.md  intermediate-representation.md  lexer-testing.md  lexer.md  normalizer.md  parser-error-recovery.md  parser-framework.md  parser.md  procedure-parser.md  (+3 more)
examples/: arithmetic.cbl  conditional.cbl  hello.cbl  subprogram.cbl
scripts/: patch_test.py  test_config.py  test_logging.py
tests/: conftest.py  test_compiler.py  test_exceptions.py  test_health.py  test_middleware.py
(+123 files in other folders)
